# bebop

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  README.uk.md  bebop.ts  deny.toml  llm-manifest.json  llms.txt  package-lock.json  package.json
.claude/: settings.json
.github/workflows/: ci.yml  openwiki-update.yml  release.yml  wiki-sync.yml
attrib/: ATTRIBUTIONS.md
bebop2/: ARCHITECTURE.md  README.md
bebop2/core/: Cargo.toml
bebop2/core/examples/: pq_demo.rs
bebop2/core/src/: active.rs  aead.rs  algebra.rs  chebyshev.rs  dmd.rs  fft.rs  field.rs  hash.rs  kalman.rs  kdf.rs  lib.rs  linalg.rs  lyapunov.rs  pq_dsa.rs  pq_kem.rs  resonator.rs  rng.rs  sign.rs  vsa.rs
bebop2/core/src/kat/: mod.rs  vectors.rs  vectors_long.rs
bebop2/core/src/pq_dsa/: acvp_tests.rs
bebop2/core/tests/: eig_parity.rs
bebop2/ports/telegram/: Cargo.toml
bebop2/proto-cap/: Cargo.toml
bebop2/proto-cap/src/: capability.rs  entropy.rs  error.rs  event_dict.rs  facade.rs  hybrid_gate.rs  lib.rs  node_id.rs  port.rs  revocation.rs  roster.rs  scope.rs  signed_frame.rs  tlv.rs
bebop2/proto-cap/tests/: mesh_consensus.rs
bebop2/proto-wire/: Cargo.toml
bebop2/proto-wire/src/: bpv7.rs  envelope.rs  framing.rs  handshake.rs  iroh_transport.rs  lib.rs  sync_pull.rs  wire_codec.rs  wss_transport.rs
bebop2/tooling/: build-wasm-component.sh  install-toolchain.sh  supply-chain.sh
bebop2/wasm-host/: Cargo.toml
bebop2/wasm-host/src/: lib.rs
bebop2/wasm-host/src/testdata/: allowed.wasm  evil.wasm
crates/bebop/: Cargo.toml
crates/bebop/benches/: BENCH_RESULTS.md  baseline.json  criterion.rs
crates/bebop/examples/: tree_vs_field_telemetry.rs
crates/bebop/src/: active_inference.rs  agent_loop.rs  agent_profile.rs  agentic_git.rs  algebra.rs  audit.rs  changes.rs  cli.rs  coherence.rs  collections.rs  copilot.rs  cost_estimate.rs  customize.rs  descartes.rs  detect.rs  drift.rs  enrich.rs  entropy_ledger.rs  error_patterns.rs  extensions.rs  field.rs  field_physics.rs  gender.rs  governor.rs  guard.rs  instrument_panel.rs  intent.rs  knowledge.rs  lanes.rs  lib.rs  loop_runtime.rs  main.rs  mapping.rs  matcher.rs  mathx.rs  mcp.rs  memory.rs  mission.rs  multipilot.rs  optical.rs  (+22 more)
crates/core/src/: lib.rs
docs/: ARCHITECTURE.md  README.md  RULES.md  VERIFICATION-MATRIX.md  commands.md  getting-started.md  i18n.md  mcp-tools.json
docs/design/: BEBOP-AGENT-MODES-AND-CINEMATIC-TELEMETRY-2026-07-12.md  BEBOP-FOCUS-OPENMANUS-LOOPENGINEERING-2026-07-12.md  BEBOP-FOCUS-OPENSCIENCE-CASAOS-SIMPLEMEM-2026-07-12.md  BEBOP-UNIFIED-MASTER-PLAN-2026-07-12.md  BEBOP2-REMEDIATION-PARALLEL-PLAN.md  CONSOLIDATED-AUDIT-EXTRACT-2026-07-11.md  ESCALATIONS.md  EXCELLENCE-REVIEW-AND-REMEDIATION-2026-07-14.md  LOGIC-LAWS.md  SOVEREIGN-EVENT-EXCHANGE-BLUEPRINT-2026-07-14.md  UNIFIED-DELIVERY-PROTOCOL-BLUEPRINT-v3-2026-07-11.md  _fable-brief-2026-07-10.md  adr-003-neuro-symbolic-gate-2026-07-09.md  bebop-L5-dual-track-gnn-2026-07-09.md  bebop-L5-research-roadmap-2026-07-09.md  bebop-fable-research-2026-07-11.md  bebop-memory-optimisation-fable-research-2026-07-11.md  bebop-optical-search-prediction-telemetry-2026-07-09.md  bebop-rust-field-core-2026-07-09.md  bebop-tensor-field-theory-2026-07-09.md  bebop2-roadmap-2026-07-10.md  dev-system-anti-hallucination-plan-2026-07-09.md  fable-review-bebop2-1783715896.md  field-vs-kdtree-scale-report-2026-07-09.md  multi-channel-field-integration-plan-2026-07-11.md  plan-audit-bebop-2026-07-11.md  research-12tool-ev-2026-07-10.md  reverse-engineering-loop-2026-07-09.md  reverse-engineering-loop-2026-07-10.md  verify-envelope-1783715926.md  verify-math-1783715925.md
docs/design/delivery-protocol/: DECOUPLED-MATCHER.md  PROTOCOL-CENTRALIZATION-MAP.md  SYSTEM-ARCHITECTURE-AUDIT.md
docs/design/fable-protocol-2026-07-11/: F1-protocol-vs-platform.md  F2-dispute-arbitration.md  F3-architecture-hidden-centralization.md  F4-storybrand-stress.md
docs/features/: consciousness.md  governor.md  guard-os.md  identity.md  kernel.md  memory.md  mesh.md
docs/footage/: README.md  bebop-session.cast  feat-agents.cast  feat-boot.cast  feat-diagrams.cast  feat-dispatch.cast  feat-govern.cast  feat-init.cast  feat-map.cast  feat-mcp.cast  feat-memory.cast  feat-node.cast  feat-recall.cast  feat-remember.cast  feat-route.cast  feat-self.cast  feat-status.cast  feat-store.cast  feat-use.cast
docs/integrations/: agent-parity.md  backends.md  mcp.md
docs/narration/: README-narration.md  architecture-narration.md  limitations-narration.md
docs/wiki/: Field-Sim-Comparison.md  Home.md  Multipilot.md  Outfit.md  Research.md  Verification.md  _Sidebar.md
rust-core/: Cargo.toml
rust-core/.cargo/: config.toml
rust-core/src/: lib.rs
scripts/: _rec_session_inner.sh  bench-field-vs-tree.mjs  ci-no-courier-scoring.sh  ci-no-flat-scope.sh  core-reverse-engineering-loop.sh  gen-diagrams.ts  i18n-translate.mjs  law-hooks.mjs  logic-gate.mjs  notify-telegram.mjs  record-feature.sh  record-session.sh  test-no-flat-scope.sh  three-model-review-record.sh  three-model-review.sh  verify-doc-claims.mjs
src/: consciousness.test.ts  consciousness.ts  governor.test.ts  governor.ts  guard.test.ts  guard.ts  hooks.test.ts  hooks.ts  knowledge.test.ts  knowledge.ts  launch.test.ts  launch.ts  loop.test.ts  loop.ts  mcp.test.ts  mcp.ts  memory.ts  schema.ts  settings.test.ts  settings.ts  skills.test.ts  skills.ts  understand.test.ts  understand.ts
src/integration/: audit.test.ts  audit.ts  bench-rust-vs-js.ts  benchmark-field-vs-tree.ts  field-optical.test.ts  field-optical.ts  field-rust.test.ts  field-rust.ts  field-sim.test.ts  field-sim.ts  modules.test.ts  modules.ts  redteam-recall.test.ts  redteam-run.test.ts  redteam-self.test.ts  reverse-engineer-loop.test.ts  reverse-engineer-loop.ts  reverse-engineer.test.ts  reverse-engineer.ts  scale-report.ts
src/integration/analytics/: anomaly.test.ts  anomaly.ts  arch-mine.test.ts  arch-mine.ts  dual-track.test.ts  dual-track.ts
src/integration/zenoh/: real-adapter.test.ts  real-adapter.ts
(+5 files in other folders)
